--- a/Simple_linear_regression.ipynb
+++ b/Simple_linear_regression.ipynb
@@ -10,15 +10,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.2-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.8.5 64-bit",
-   "display_name": "Python 3.8.5 64-bit",
+   "name": "Python 3.8.2 64-bit",
+   "display_name": "Python 3.8.2 64-bit",
    "metadata": {
     "interpreter": {
-     "hash": "2db524e06e9f5f4ffedc911c917cb75e12dbc923643829bf417064a77eb14d37"
+     "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
     }
    }
   }
@@ -35,13 +35,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Libraries imported\n"
+    }
+   ],
+   "source": [
+    "# importing libraries\n",
+    "\n",
+    "import pandas as pd\n",
+    "import pylab as pl\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "from sklearn import linear_model\n",
+    "\n",
+    "print(\"Libraries imported\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# importing libraries\n",
+    "# downloading data\n",
     "\n",
-    "import "
+    "!wget -O FuelConsumption.csv https://s3-api.us-geo.objectstorage.softlayer.net/cf-courses-data/CognitiveClass/ML0101ENv3/labs/FuelConsumptionCo2.csv"
    ]
   }
  ]
