--- a/Polynomial_Regression.ipynb
+++ b/Polynomial_Regression.ipynb
@@ -176,9 +176,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[ 1.  ,  2.  ,  4.  ],\n       [ 1.  ,  2.4 ,  5.76],\n       [ 1.  ,  3.5 , 12.25],\n       ...,\n       [ 1.  ,  3.2 , 10.24],\n       [ 1.  ,  3.  ,  9.  ],\n       [ 1.  ,  3.2 , 10.24]])"
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
    "source": [
     "# creating the model\n",
     "\n",
@@ -192,8 +201,18 @@
     "#test data\n",
     "test_x = np.asanyarray(test[['ENGINESIZE']])\n",
     "test_y = np.asanyarray(test[['CO2EMISSIONS']])\n",
-    "\n"
+    "\n",
+    "polynomial = PolynomialFeatures(degree=2)\n",
+    "poly_trainX = polynomial.fit_transform(train_x)\n",
+    "poly_trainX"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
